--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -81,6 +81,7 @@
         android:layout_height="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
+        android:visibility="invisible"
         app:useMaterialThemeColors="false"
         android:button="@drawable/checkbox"
         android:buttonTint="@color/red"
