--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,6 +11,6 @@
     <color name="light_gray">#D3D3D3</color>
     <color name="red">#CF000F</color>
 
-    <color name="accentItemBottomNav">#023047</color>
-    <color name="disableItemBottomNav">#717171</color>
+    <color name="accentItemBottomNav">#FFB703</color>
+    <color name="disableItemBottomNav">#D3D3D3</color>
 </resources>
