--- a/app/src/main/res/drawable/ic_baseline_sort_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_sort_24.xml
@@ -6,8 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M15.5,5l-4.5,0l5,7l-5,7l4.5,0l5,-7z"/>
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M8.5,5l-4.5,0l5,7l-5,7l4.5,0l5,-7z"/>
+      android:pathData="M3,18h6v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h12v-2L3,11v2z"/>
 </vector>
