--- a/app/src/main/res/layout/item_favorites_offline.xml
+++ b/app/src/main/res/layout/item_favorites_offline.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewMovie"
-        android:layout_width="140dp"
-        android:layout_height="235dp"
+        android:layout_width="126dp"
+        android:layout_height="223dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="12dp"
-        android:layout_marginStart="12dp"
         app:cardElevation="16dp"
         android:checkable="true"
         android:clickable="true"
@@ -49,9 +47,8 @@
                 android:id="@+id/movieTitleTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:ellipsize="end"
-                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:maxLines="1"
                 android:text="@string/movie_title"
