--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -12,6 +12,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:lottie_rawRes="@raw/movie_loading"
+        android:visibility="invisible"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationLoadingDarkMode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:lottie_rawRes="@raw/movie_loading_darkmode"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_baseline_filter_alt_24"
+        android:src="@drawable/ic_baseline_sort_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +59,7 @@
         android:layout_height="wrap_content"
         android:text="@string/welcome_message"
         android:textStyle="bold"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewFilterGenres"
         app:layout_constraintEnd_toStartOf="@+id/imageViewFilterGenres"
         app:layout_constraintStart_toStartOf="parent"
