--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -86,6 +86,8 @@
                             app:boxCornerRadiusBottomStart="12dp"
                             app:boxCornerRadiusTopEnd="12dp"
                             app:boxCornerRadiusTopStart="12dp"
+                            app:boxStrokeColor="@color/disableItemBottomNav"
+                            app:hintTextColor="@color/disableItemBottomNav"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="1dp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +114,8 @@
                             app:boxCornerRadiusBottomStart="12dp"
                             app:boxCornerRadiusTopEnd="12dp"
                             app:boxCornerRadiusTopStart="12dp"
+                            app:boxStrokeColor="@color/disableItemBottomNav"
+                            app:hintTextColor="@color/disableItemBottomNav"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="1dp"
                             app:endIconMode="password_toggle"
@@ -139,6 +143,8 @@
                             app:boxCornerRadiusBottomStart="12dp"
                             app:boxCornerRadiusTopEnd="12dp"
                             app:boxCornerRadiusTopStart="12dp"
+                            app:boxStrokeColor="@color/disableItemBottomNav"
+                            app:hintTextColor="@color/disableItemBottomNav"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="1dp"
                             app:endIconMode="password_toggle"
