--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -87,6 +87,8 @@
                             app:boxCornerRadiusBottomStart="12dp"
                             app:boxCornerRadiusTopEnd="12dp"
                             app:boxCornerRadiusTopStart="12dp"
+                            app:boxStrokeColor="@color/disableItemBottomNav"
+                            app:hintTextColor="@color/disableItemBottomNav"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="1dp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +115,8 @@
                             app:boxCornerRadiusBottomStart="12dp"
                             app:boxCornerRadiusTopEnd="12dp"
                             app:boxCornerRadiusTopStart="12dp"
+                            app:boxStrokeColor="@color/disableItemBottomNav"
+                            app:hintTextColor="@color/disableItemBottomNav"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="1dp"
                             app:endIconMode="password_toggle"
