--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,35 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColorSecondary">@color/honey_yellow</item>
+        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
     </style>
+
+<style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+<item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+</style>
+
+<style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
+<item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
+</style>
+
+<style name="CustomShapeAppearanceBottomSheetDialog" parent="">
+<item name="cornerFamily">rounded</item>
+<item name="cornerSizeTopRight">24dp</item>
+<item name="cornerSizeTopLeft">24dp</item>
+<item name="cornerSizeBottomRight">0dp</item>
+<item name="cornerSizeBottomLeft">0dp</item>
+
+
+</style>
+
+<style name="Theme.MovieApp.NoActionBar">
+<item name="windowActionBar">false</item>
+<item name="windowNoTitle">true</item>
+</style>
+
+<style name="Theme.MovieApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+<style name="Theme.MovieApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
 </resources>
