--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
 
     <color name="accentTitleColor">#023047</color>
 
+    <color name="mtrl_textinput_default_box_stroke_color">#717171</color>
+
 </resources>
