--- a/app/src/main/res/layout/offline_fragment.xml
+++ b/app/src/main/res/layout/offline_fragment.xml
@@ -42,6 +42,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/searchEditText"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/disableItemBottomNav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:maxLines="1"
