--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -97,6 +97,8 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/emailEditTextView"
+                                android:textCursorDrawable="@null"
+                                android:textColor="@color/disableItemBottomNav"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:hint="@string/login_email"
@@ -126,6 +128,8 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/passwordEditText"
+                                android:textCursorDrawable="@null"
+                                android:textColor="@color/disableItemBottomNav"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:hint="@string/login_password"
@@ -155,6 +159,8 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/passwordConfirmEditText"
+                                android:textCursorDrawable="@null"
+                                android:textColor="@color/disableItemBottomNav"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:hint="@string/login_password"
